--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>第三方平台 - 官网</title>
+    <title>安徽蒂姆自动化科技有限公司 - 官网</title>
     <style>
         body {
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -26,10 +26,9 @@
 </head>
 <body>
     <h1>欢迎访问我们的平台</h1>
-    <p class="desc">这是我们的第三方平台官网，用于展示服务、提供微信开放平台认证。</p>
+    <p class="desc">这是我们的第三方平台照片打印的官网，用于微信授权和支付。</p>
     <div class="contact">
-        联系邮箱：youremail@example.com<br/>
-        版权所有 &copy; 2025 Your Company
+        
     </div>
 </body>
 </html>
